deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boonlong-app1-deployment
spec:
  replicas: 2   # จำนวนการทำงานของ container
  selector:
    matchLabels:
      app: boonlong-app1-deployment
  template:
    metadata:
      labels:
        app: boonlong-app1-deployment
    spec:
      containers:
        - name: boonlong-app1
          image: registry.dc.ns.co.th/boonlong-app1:v1.0.4 # image ที่จะใช้งาน
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
