service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boonlong-app1-service
  labels:
    app: boonlong-app1-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: boonlong-app1-deployment
