ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boonlong-app1-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: boonlong-app1.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boonlong-app1-service
                port:
                  number: 80
